...
              if (currentUser?.uid != note?.userId) {
                Spacer(modifier = Modifier.weight(1.5f))
              }
              Text(
                  if (currentUser?.uid == note?.userId) "Edit Note" else "View Note",
                  color = MaterialTheme.colorScheme.onSurface,
                  modifier = Modifier.testTag("editNoteTitle"))
              if (currentUser?.uid != note?.userId) {
                Spacer(modifier = Modifier.weight(2f))
              }
            }
      },
      navigationIcon = {
        IconButton(
            modifier = Modifier.testTag("closeButton"),
            onClick = {
              // Check if any fields were modified
              if (isModified) {
                showDiscardChangesDialog = true
              } else {
                navigationActions.goBack()
...
    Text(text = "Title", style = MaterialTheme.typography.titleMedium)
    NoteDataTextField(
        value = noteTitle,
        onValueChange = { onNoteTitleChange(Note.formatTitle(it)) },
        label = "",
        placeholder = "Enter the new title here",
        modifier = Modifier.fillMaxWidth().testTag("EditTitle textField"),
        enabled = note.isOwner(currentUserId),
        trailingIcon = {
          IconButton(onClick = { onNoteTitleChange("") }, enabled = isEnabled) {
            Icon(Icons.Outlined.Clear, contentDescription = "Clear Title")
          }
        })
...

    // Course Full Name
    if (!showCourseDetails) {
      Box(
          modifier =
              Modifier.fillMaxWidth()
                  .testTag("CourseFullName textField")
                  .clickable { showCourseDetails = !showCourseDetails } // Handle click
                  .border(1.dp, Color.Black, OutlinedTextFieldDefaults.shape)) {
            val course = Course(courseCode, courseName, courseYear, "")
            val courseFullName = if (course == Course.EMPTY) "No course" else course.fullName()
            Text(
                text = courseFullName,
...
            // Course Code
            NoteDataTextField(
                value = courseCode,
                onValueChange = { onCourseCodeChange(Course.formatCourseCode(it)) },
                label = "Course Code",
                placeholder = "Set the course code for the note",
                modifier = Modifier.fillMaxWidth().testTag("EditCourseCode textField"),
                enabled = isEnabled)

            // Course Name
            NoteDataTextField(
                value = courseName,
                onValueChange = { onCourseNameChange(Course.formatCourseName(it)) },
                label = "Course Name",
                placeholder = "Set the course name for the note",
                modifier = Modifier.fillMaxWidth().testTag("EditCourseName textField"),
                enabled = isEnabled)

            // Course Year
            NoteDataTextField(
                value = courseYear?.toString() ?: "",
                onValueChange = { onCourseYearChange(it) },
                label = "Course Year",
                placeholder = "Set the course year for the note",
                modifier = Modifier.fillMaxWidth().testTag("EditCourseYear textField"),
                enabled = isEnabled)
          }
        }
  }
}

...
                userId = note.userId,
                folderId = note.folderId,
                comments = note.comments))
        noteViewModel.getNoteById(note.id, useCache = true)
        Toast.makeText(context, "Note saved", Toast.LENGTH_SHORT).show()
      },
      modifier = Modifier.testTag("saveNoteButton")) {
        Icon(
            imageVector = Icons.Default.Check,
            contentDescription = "Save Note",
            tint = MaterialTheme.colorScheme.onSurface)
      }
}
...
    navigationActions: NavigationActions,
    noteViewModel: NoteViewModel
) {
  if (currentUser != null && note != null) {
    var showDeleteConfirmation by remember { mutableStateOf(false) }
    FloatingActionButton(
        modifier = Modifier.testTag("deleteNoteButton"),
        onClick = {
          // Show confirmation dialog when delete button is clicked
          showDeleteConfirmation = true
        },
        containerColor = MaterialTheme.colorScheme.error,
        contentColor = MaterialTheme.colorScheme.onError,
...
