...
        TopLevelDestinations.DECK_OVERVIEW,
        TopLevelDestinations.SEARCH,
        TopLevelDestinations.PROFILE)

object EditNoteDestinations {
  val DETAIL =
      Destination(screen = Screen.EDIT_NOTE, icon = Icons.Outlined.Settings, textId = "Detail")
  val COMMENT =
      Destination(
          screen = Screen.EDIT_NOTE_COMMENT,
          icon = Icons.AutoMirrored.Outlined.Comment,
          textId = "Comments")
  val PDF =
      Destination(screen = Screen.EDIT_NOTE_PDF, icon = Icons.Outlined.PictureAsPdf, textId = "PDF")
  val MARKDOWN =
      Destination(
          screen = Screen.EDIT_NOTE_MARKDOWN, icon = Icons.Outlined.EditNote, textId = "Content")
}

val LIST_EDIT_NOTE_DESTINATION =
    listOf(
        EditNoteDestinations.DETAIL,
        EditNoteDestinations.COMMENT,
...
