...

  /** Row item button to convert PDF to text */
  @Composable
  fun rowItemConvertToText() {
    RowItemPdfViewer(
        buttonText = stringResource(R.string.convert_to_text),
        testTag = "convertPdfToTextMenuItem",
        onClick = {
          try {
            isLoading = true // Show progress indicator
            textExtractor.processPdfFile(
                pdfFile = pdfFile!!,
                onSuccess = { text ->
...

  /** Row item button to re-scan PDF */
  @Composable
  fun rowItemRescanPdf() {
    RowItemPdfViewer(
        buttonText = stringResource(R.string.re_scan_pdf),
        testTag = "rescanPdfMenuItem",
        onClick = {
          scanner.scan {
            fileViewModel.deleteFile(note!!.id, FileType.NOTE_PDF)
            pdfFile = null
            pdfExists = false
            fileViewModel.updateFile(note!!.id, it, FileType.NOTE_PDF)
...
  /** Row item button to delete PDF */
  @Composable
  fun rowItemDeletePdf() {
    RowItemPdfViewer(
        buttonText = stringResource(R.string.delete_pdf_no_question),
        textColor = MaterialTheme.colorScheme.error,
        testTag = "deletePdfMenuItem",
        onClick = {
          showDeleteConfirmation = true
          expandedMenu = false
        },
        icon = {
          Icon(
...
  }

  /** Bottom sheet menu with options for PDF */
  @Composable
  fun bottomSheetMenu() {
    ModalBottomSheet(
        modifier = Modifier.testTag("pdfOptionsMenu"),
        onDismissRequest = { expandedMenu = false },
        content = {
          Column(
              modifier = Modifier.fillMaxWidth().padding(20.dp),
              content = {
                rowItemConvertToText() // Item 1: Convert to text
...
            retryDownload = true // Trigger retry logic
            attempt = 0 // Reset attempts
          }
        },
        containerColor = MaterialTheme.colorScheme.primary,
        contentColor = MaterialTheme.colorScheme.onPrimary,
        modifier = Modifier.testTag("scanPdfButton"),
        content = { Icon(Icons.Default.UploadFile, "Scan") })
  }

  /** More options button to display the bottom sheet. Shown when PDF available */
  @Composable
  fun moreOptionsIconButton() {
    IconButton(
        modifier = Modifier.testTag("moreOptionsPdfButton"),
        content = { Icon(Icons.Default.MoreVert, contentDescription = "More options") },
        onClick = { expandedMenu = true })
  }

  // ----------------------------- UI -----------------------------
  Scaffold(
...
              text = stringResource(R.string.loading_pdf),
              modifier = Modifier.fillMaxSize().padding(paddingValues))
        } else if (pdfExists && pdfFile != null) {
          PdfRendererViewCompose(
              file = pdfFile!!,
              lifecycleOwner = LocalLifecycleOwner.current,
              modifier = Modifier.fillMaxSize().padding(paddingValues).testTag("PDFViewer"))
        } else {
          Column(
              modifier = Modifier.fillMaxSize().testTag("noPdfFound"),
              verticalArrangement = Arrangement.Center,
              horizontalAlignment = Alignment.CenterHorizontally,
              content = { Text(stringResource(R.string.no_pdf_found)) })
        }
      }
}
...
 * @param navigationActions The NavigationActions object to navigate between screens.
 * @param noteViewModel The NoteViewModel to access the selected note.
 */
@Composable
fun NavigationIconPdfTopBar(navigationActions: NavigationActions, noteViewModel: NoteViewModel) {
  IconButton(
      modifier = Modifier.testTag("closeButton"),
      content = {
        Icon(
            imageVector = Icons.Filled.Close,
            contentDescription = "Exit Edit Note",
            tint = MaterialTheme.colorScheme.onSurface)
      },
...
